Optimized Spring startup, removed dependency on guava.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+#Uncoment to see enabled autoconfigurations
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
+#Explicit disable of unneeded spring module, so startup is faster
+spring.aop.auto=false
+spring.jmx.enabled=false
