Fixed creation of unnecessary unit conversion entities.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 
 #Database - data source configuration
 spring.datasource.driver=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:file:db/database;hsqldb.sqllog=3
+spring.datasource.url=jdbc:hsqldb:file:db/database
+#use this datasource url for hsqldb query logging
+#spring.datasource.url=jdbc:hsqldb:file:db/database;hsqldb.sqllog=3
 spring.datasource.username=SA
 spring.datasource.password=
 
