Moved logging configuration outside jar. Logging can now be reconfigured and applied at runtime.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #Explicit disable of unneeded spring module, so startup is faster
 spring.aop.auto=false
 spring.jmx.enabled=false
+#Set up location of logging configuration for logback
+logging.config=file:./logback-spring.xml
