--- a/db/database.properties
+++ b/db/database.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Jul 22 11:13:20 CEST 2018
+#Tue Jul 31 21:21:56 CEST 2018
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.4.0
