--- a/db/database.properties
+++ b/db/database.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Oct 21 10:46:59 CEST 2018
+#Fri Nov 16 15:33:58 CET 2018
 tx_timestamp=0
 modified=no
 version=2.4.0
