Added user entity. Skeleton for nutrition facts generator.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
                     <artifactId>commons-lang3</artifactId>
                     <version>${commonslang.version}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-collections4</artifactId>
+                    <version>4.3</version>
+                </dependency>
 
                 <!-- Logging -->
                 <dependency>
