--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
         <!-- Properties shared for all profiles -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>cz.afrosoft.whattoeat.Main</mainClass>
-        <hsqldb.version>2.7.2</hsqldb.version>
-        <commonslang.version>3.14.0</commonslang.version>
-        <logback.version>1.4.14</logback.version>
-        <xmlbind.version>2.3.1</xmlbind.version>
+        <hsqldb.version>2.7.4</hsqldb.version>
+        <commonslang.version>3.20.0</commonslang.version>
+        <logback.version>1.5.32</logback.version>
+        <xmlbind.version>4.0.5</xmlbind.version>
         <!-- current jdk profile specific properties -->
-        <default.spring.boot.version>3.2.1</default.spring.boot.version>
-        <default.controlsfx.version>11.2.0</default.controlsfx.version>
+        <default.spring.boot.version>3.5.11</default.spring.boot.version>
+        <default.controlsfx.version>11.2.3</default.controlsfx.version>
         <!-- jdk9 profile specific properties -->
         <jdk9.spring.boot.version>2.0.0.RELEASE</jdk9.spring.boot.version>
         <jdk9.controlsfx.version>9.0.0</jdk9.controlsfx.version>
@@ -64,20 +64,20 @@
                     <version>${hsqldb.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
                     <version>${xmlbind.version}</version>
                 </dependency>
                 <!-- JavaFX and Additional GUI components -->
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-controls</artifactId>
-                    <version>21.0.1</version>
+                    <version>21.0.10</version>
                 </dependency>
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-fxml</artifactId>
-                    <version>21.0.1</version>
+                    <version>21.0.10</version>
                 </dependency>
                 <dependency>
                     <groupId>org.controlsfx</groupId>
@@ -94,7 +94,7 @@
                 <dependency>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-collections4</artifactId>
-                    <version>4.4</version>
+                    <version>4.5.0</version>
                 </dependency>
 
                 <!-- Logging -->
@@ -239,8 +239,8 @@
                     <version>${hsqldb.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
                     <version>${xmlbind.version}</version>
                 </dependency>
                 <!-- Additional GUI components -->
@@ -259,7 +259,7 @@
                 <dependency>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-collections4</artifactId>
-                    <version>4.3</version>
+                    <version>4.5.0</version>
                 </dependency>
 
                 <!-- Logging -->
@@ -276,7 +276,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.7.0</version>
+                        <version>3.11.0</version>
                         <configuration>
                             <source>9</source>
                             <target>9</target>
@@ -397,8 +397,8 @@
                     <version>${hsqldb.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
                     <version>${xmlbind.version}</version>
                 </dependency>
 
