Main window size and position is now loaded from config file.

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,6 @@
 data.file.encoding=UTF-8
 data.file.json.pretty=true
+gui.main.window.width=954
+gui.main.window.height=688
+gui.main.window.position.x=50
+gui.main.window.position.y=0
